# rbassist

./: .gitignore  ABOUT.md  ADVANCED_MATCHING_PLAN.md  AGENTS.md  AI_TAGS_QUICKREF.txt  AI_TAG_SYSTEM_COMPLETE.md  CHANGES.md  EMBEDDING_UPGRADE_PLAN.md  INTEGRATION_TEST_REPORT.md  README.md  SYSTEM_STATUS_SUMMARY.md  SYSTEM_WIRING_DIAGRAM.md  VERIFICATION_CHECKLIST.md  WISHLIST.md  __init__.py  analyze.py  bandcamp.py  cli.py  config.yml  debug_rbassist.py  djlink.py  duplicates.py  embed.py  export_xml.py  gui.py  playlists.py  prefs.py  prev_analyze.py  prev_embed.py  pyproject.toml  rbassist_codex_brief.md  readme.txt  recommend.py  spec_1_rbassist_local_ai_dj_toolkit_architecture.md  start.bat  start.ps1  start.sh  stems.py  tag_model.py  tagstore.py  (+3 more)
.claude/: settings.local.json
cleanup_backup_20251123_114924/: TEMP_block.txt  fix_rbassist_install.ps1  fix_rbassist_install_v2.ps1  rbassist.xml  rbassist_vs_code_copilot_codex_one_pager_build_plan.md  run_rbassist_gui.bat - Shortcut.lnk  xxfromgot .txt
config/: cue_template.example.yml  cue_templates.yml  my_tags.example.yml  sampling.yml  tags.example.yml  ui_settings.example.json  ui_settings.json
docs/: AI_TAGS_ARCHITECTURE.md  AI_TAGS_QUICKSTART.md  AI_TAGS_README.md  AI_TAG_LEARNING.md  QUICK_START.md  tagging_active_learning_plan.md
rbassist/: ABOUT.md  active_learning.py  ai_tag_cli.py  analyze.py  beatgrid.py  bpm_sources.py  cli.py  config.example.yml  cue_templates.py  cues.py  djlink.py  duplicates.py  embed.py  export_xml.py  features.py  gpu_utils.py  gui.py  health.py  install.cmd  install.py  (+27 more)
(+139 files in other folders)
